# runbot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: run  start
llm_server/: .dockerignore  Dockerfile  README.md  log_conf.yaml  main.py  pyproject.toml  test_client.py
scripts/: check_env_vars.py  debug_day_of_week.py  diagnose_action_network.py  examine_attendance.py  list_sheet_tabs.py  main.py  test_action_network.py  test_attendance_parser.py  test_bl_exclusion.py  test_bl_message_format.py  test_deduplication.py  test_fuzzy_match_multiple_runs.py  test_fuzzy_matching.py  test_llm_debug.py  test_llm_matching.py  test_message_history.py  test_multiple_invalid_bls.py  test_name_filtering_demo.py  test_name_validation.py  test_new_attendance.py  test_note_stripping.py  test_nudge_logic.py  test_phone_normalization.py  test_south_brooklyn_match.py  view_attendance_data.py
utils/: action_network_utils.py  attendance_utils.py  config_utils.py  google_utils.py  llm_client.py  phone_utils.py  twilio.py
